--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "qrcode.react": "^4.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-to-print": "^3.1.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
